added Iax supernovae

--- a/glossary.tex
+++ b/glossary.tex
@@ -286,7 +286,9 @@
 \newglossaryentry{snia}{name=Type~Ia (SN~Ia), text={SN~Ia}, description={Thermonuclear explosion of a white dwarf - spectra show no hydrogen but a strong silicon line},first={Type~Ia supernova (SN~Ia)}, firstplural={Type Ia supernovae (SNe~Ia)}, plural={SNe~Ia}, parent=sn, nonumberlist=true}
 \newcommand{\sneia}{\glspl*{snia}\xspace}
 \newcommand{\snia}{\gls*{snia}\xspace}
-
+\newglossaryentry{sniax}{name=Type~Ia (SN~Iax), text={SN~Iax}, description={Subclass of Ia supernovae (often called 02cx-like)},first={Type~Iax supernova (SN~Iax)}, firstplural={Type Ia supernovae (SNe~Iax)}, plural={SNe~Iax}, parent=snia, nonumberlist=true}
+\newcommand{\sneiax}{\glspl*{sniax}\xspace}
+\newcommand{\sniax}{\gls*{sniax}\xspace}
 \newglossaryentry{branchnormal}{name={branch-normal}, text=\textit{Branch-normal}, description={Large homogeneous class of Type Ia Supernovae, defined in \citet{1993AJ....106.2383B}}, first={\textit{Branch-normal} SNe Ia \citep{1993AJ....106.2383B}}, parent=snia}
 \newglossaryentry{91t}{name={91T-like}, description={Luminous class of Type Ia supernovae similar to \sn{1991}{T} \citep{1992AJ....103.1632P}} , first={91T-like}, parent=snia}
 \newglossaryentry{91bg}{name={91bg-like}, description={Faint class of Type Ia supernovae similar to \sn{1991}{bg} \citep{1992AJ....104.1543F}}, first={91bg-like}, parent=snia}
